# rtmr

./: README.txt
binaries/linux/debian/: librtmr_1.8.0-1_i386.deb  netserver_1.8.0-1_i386.deb  rtmr_1.11.0-1_i386.deb
sources/client/client/: client.pro
sources/client/client-app/: client-app.pro  client-npp.pro  gnome.desktop  main.cpp  npresources.rc  resources.qrc  resources.rc  rtmrapp.exe.manifest  standard.css
sources/client/client-app/gui/: frame_project.cpp  frame_project.h  mainwindow.cpp  mainwindow.h
sources/client/client-app/images/: client.icns
sources/client/client-app/imaging/: Chain.cpp  Chain.h  Chart.cpp  Chart.h  GradientColor.cpp  GradientColor.h  GraphicImage.cpp  GraphicImage.h  Image.cpp  Image.h  Rectangle3D.cpp  Rectangle3D.h  Rectangle3DIterator.cpp  Rectangle3DIterator.h
sources/client/client-app/languages/: client_en.qm  client_en.ts  client_es.qm  client_es.ts  server_en.qm  server_en.ts  server_es.qm  server_es.ts
sources/client/client-app/objects/: Comparable.cpp  Comparable.h  DataObject.cpp  DataObject.h  (+4 more)
sources/client/client-entities/: action.cpp  action.h  automatedaction.cpp  automatedaction.h  automatedactionvalidation.cpp  automatedactionvalidation.h  bug.cpp  bug.h  campaign.cpp  campaign.h  client-entities.pro  customfield.cpp  customfield.h  customfielddesc.cpp  customfielddesc.h  customrequirementfield.cpp  customrequirementfield.h  customtestfield.cpp  customtestfield.h  executionaction.cpp  executionaction.h  executioncampaign.cpp  executioncampaign.h  executioncampaignparameter.cpp  executioncampaignparameter.h  executionrequirement.cpp  executionrequirement.h  executiontest.cpp  executiontest.h  executiontestparameter.cpp  executiontestparameter.h  genericrecord.cpp  genericrecord.h  hierarchy.cpp  hierarchy.h  parameter.cpp  parameter.h  parent.cpp  parent.h  project.cpp  (+34 more)
sources/client/client-launcher/: client-launcher-resources.qrc  client-launcher.pro  client_launcher.cpp  client_launcher.h  main.cpp  process_utils.cpp  process_utils.h  rtmr.exe.manifest
sources/client/client-lib/: Makefile.macos  client-lib.rc  client-lib.vcxproj  client.c
sources/client/client-modules/: bugtracker.cpp  bugtracker.h  client-modules.doxyfile  client-modules.pro  clientmodule.h
sources/client/common/: licence_header.txt
sources/database/postgresql_scripts/: create_all_functions.sql  create_database.sql  install_database.sql
sources/librtmr/: Makefile.am  Makefile.in  configure  configure.ac
sources/librtmr/debian/: README  README.Debian  README.source  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  init.d.lsb.ex  librtmr.default.ex  librtmr.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
sources/librtmr/src/client-lib/: client-lib.cbp  client-lib.doxyfile  client.h
sources/librtmr/src/client-lib/client-library.xcodeproj/: ejorge.mode1v3  ejorge.pbxuser
sources/librtmr/src/common/: common.doxyfile  constants.h  entities.c  entities.h  errors.h  netcommon.h  utilities.c  utilities.h
sources/librtmr/src/common/ldap/: ldap-client-library.h
sources/librtmr/src/common/postgres/: postgres-client-library.h
sources/netserver/: Makefile.am  Makefile.in  configure  configure.ac
sources/netserver/debian/: README  README.Debian  README.source  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  netserver.default.ex  netserver.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
sources/netserver/src/common/: common.pri  entities-def.h  errors.c  netcommon.c
sources/netserver/src/netserver/: Makefile.macos  main.c  net.nexp.netserver.plist  netserver.vcxproj  netservice.c  serveur.c  serveur.h  service.c  service.h
sources/netserver/src/netserver/conf/: netserver.conf
sources/netserver/src/netserver/netserver.xcodeproj/: ejorge.mode1v3  ejorge.pbxuser  project.pbxproj
(+176 files in other folders)
